// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RegisterPage /> Should render and match the researcher 1`] = `
<div
  class="styled__Background-hdmnn0-0 hmySuK"
>
  <div
    class="styled__TopBackground-hdmnn0-1 fKSajA"
  />
  <div
    class="styled__Header-hdmnn0-2 hWqYDm"
  >
    <img
      class="styled__Logo-hdmnn0-3 hnzJby"
      src="IMAGE_MOCK"
    />
  </div>
  <div
    class="styled__Content-hdmnn0-4 cwrYjh"
  >
    <div
      class="Fill-sc-12xwpzs-0 tIBAp"
    >
      <div
        class="Column-sc-4zswzq-0 gYlaIX"
      >
        <h1
          class="H1-sc-1k7m23t-0 ikOywA"
          font-size="23"
        >
          Register researcher account
        </h1>
        <div
          class="Row-y1cs0u-0 gQFDhs"
          width="100%"
        >
          <div
            class="Column-sc-4zswzq-0 ehOEzE"
          >
            <p
              class="Text-e4p0w3-0 kFFPgx"
              width="fit-content"
            >
              First Name
            </p>
            <input
              class="Input-t9j2q5-0 ptbLy"
              height="46"
              name="firstName"
              placeholder="Enter first name"
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            class="Column-sc-4zswzq-0 jCuscc"
          >
            <p
              class="Text-e4p0w3-0 kFFPgx"
              width="fit-content"
            >
              Last name
            </p>
            <input
              class="Input-t9j2q5-0 ptbLy"
              height="46"
              name="lastName"
              placeholder="Enter last name"
              type="text"
              value=""
              width="100%"
            />
          </div>
        </div>
        <div
          class="Column-sc-4zswzq-0 jCuscc"
        >
          <p
            class="Text-e4p0w3-0 kFFPgx"
            width="fit-content"
          >
            E-mail address
          </p>
          <input
            class="Input-t9j2q5-0 kmneJd"
            disabled=""
            height="46"
            name="email"
            placeholder="Enter e-mail address"
            type="email"
            value="test@gmail.com"
            width="100%"
          />
        </div>
        <div
          class="Column-sc-4zswzq-0 jCuscc"
        >
          <p
            class="Text-e4p0w3-0 kFFPgx"
            width="fit-content"
          >
            Password
          </p>
          <input
            class="Input-t9j2q5-0 ptbLy"
            height="46"
            name="password"
            placeholder="Enter password"
            type="password"
            value=""
            width="100%"
          />
        </div>
        <div
          class="Column-sc-4zswzq-0 jCuscc"
        >
          <p
            class="Text-e4p0w3-0 kFFPgx"
            width="fit-content"
          >
            Password confirmation
          </p>
          <input
            class="Input-t9j2q5-0 ptbLy"
            height="46"
            name="passwordConfirmation"
            placeholder="Retype your password"
            type="password"
            value=""
            width="100%"
          />
        </div>
        <button
          class="StyledButton-d2s0gt-0 drgoYy"
          color="primary"
          height="46"
          radius="100px"
          type="submit"
        >
          Register
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<RegisterPage /> Should render and match the snapshot for participant 1`] = `
<div
  class="styled__Background-hdmnn0-0 hmySuK"
>
  <div
    class="styled__TopBackground-hdmnn0-1 fKSajA"
  />
  <div
    class="styled__Header-hdmnn0-2 hWqYDm"
  >
    <img
      class="styled__Logo-hdmnn0-3 hnzJby"
      src="IMAGE_MOCK"
    />
  </div>
  <div
    class="styled__Content-hdmnn0-4 cwrYjh"
  >
    <div
      class="Fill-sc-12xwpzs-0 tIBAp"
    >
      <div
        class="Column-sc-4zswzq-0 gYlaIX"
      >
        <h1
          class="H1-sc-1k7m23t-0 ikOywA"
          font-size="23"
        >
          Register participant account
        </h1>
        <div
          class="Row-y1cs0u-0 gQFDhs"
          width="100%"
        >
          <div
            class="Column-sc-4zswzq-0 ehOEzE"
          >
            <p
              class="Text-e4p0w3-0 kFFPgx"
              width="fit-content"
            >
              First Name
            </p>
            <input
              class="Input-t9j2q5-0 ptbLy"
              height="46"
              name="firstName"
              placeholder="Enter first name"
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            class="Column-sc-4zswzq-0 jCuscc"
          >
            <p
              class="Text-e4p0w3-0 kFFPgx"
              width="fit-content"
            >
              Last name
            </p>
            <input
              class="Input-t9j2q5-0 ptbLy"
              height="46"
              name="lastName"
              placeholder="Enter last name"
              type="text"
              value=""
              width="100%"
            />
          </div>
        </div>
        <div
          class="Column-sc-4zswzq-0 jCuscc"
        >
          <p
            class="Text-e4p0w3-0 kFFPgx"
            width="fit-content"
          >
            E-mail address
          </p>
          <input
            class="Input-t9j2q5-0 ptbLy"
            height="46"
            name="email"
            placeholder="Enter e-mail address"
            type="email"
            value=""
            width="100%"
          />
        </div>
        <div
          class="Column-sc-4zswzq-0 jCuscc"
        >
          <p
            class="Text-e4p0w3-0 kFFPgx"
            width="fit-content"
          >
            Password
          </p>
          <input
            class="Input-t9j2q5-0 ptbLy"
            height="46"
            name="password"
            placeholder="Enter password"
            type="password"
            value=""
            width="100%"
          />
        </div>
        <div
          class="Column-sc-4zswzq-0 jCuscc"
        >
          <p
            class="Text-e4p0w3-0 kFFPgx"
            width="fit-content"
          >
            Password confirmation
          </p>
          <input
            class="Input-t9j2q5-0 ptbLy"
            height="46"
            name="passwordConfirmation"
            placeholder="Retype your password"
            type="password"
            value=""
            width="100%"
          />
        </div>
        <button
          class="StyledButton-d2s0gt-0 drgoYy"
          color="primary"
          height="46"
          radius="100px"
          type="submit"
        >
          Register
        </button>
        <div
          class="Row-y1cs0u-0 YUCXT"
          width="100%"
        >
          <a
            href="/login"
          >
            <button
              class="StyledTextButton-sc-1b7egxw-0 fJAMdx"
              color="#C866EA"
            >
              I already have an account
            </button>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
